<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:background="@drawable/maps">

    <TextView
        android:id="@+id/bgLabel"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="#D9D9D9"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/man_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/man_avata"
        app:layout_constraintLeft_toLeftOf="@id/bgLabel"
        app:layout_constraintTop_toTopOf="@id/bgLabel"
        app:layout_constraintBottom_toBottomOf="@id/bgLabel"
        android:contentDescription="@string/_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:text="@string/ivanov"
        app:layout_constraintLeft_toRightOf="@id/man_avatar"
        app:layout_constraintTop_toTopOf="@id/man_avatar"
        android:layout_marginStart="21dp"/>

    <TextView
        android:id="@+id/man_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:text="@string/ivanov"
        app:layout_constraintLeft_toRightOf="@id/man_avatar"
        app:layout_constraintTop_toTopOf="@id/man_avatar"
        android:layout_marginStart="21dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:text="@string/novosibirsk"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/man_avatar"
        app:layout_constraintTop_toBottomOf="@id/man_name"
        android:layout_marginStart="21dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/_1"
        android:src="@drawable/curcle"
        app:layout_constraintBottom_toBottomOf="@id/bgLabel"
        app:layout_constraintRight_toRightOf="@id/bgLabel"
        app:layout_constraintTop_toTopOf="@id/bgLabel"
        tools:ignore="ImageContrastCheck" />
    
    <LinearLayout
        android:layout_width="174dp"
        android:layout_height="150dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#D9D9D9"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F6BC1A"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/profile"
            android:drawablePadding="50dp"
            android:layout_marginStart="28dp"
            app:drawableEndCompat="@drawable/avatar"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F6BC1A"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/history"
            android:drawablePadding="44dp"
            android:layout_marginStart="28dp"
            app:drawableEndCompat="@drawable/history"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F6BC1A"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/settings"
            android:drawablePadding="38dp"
            android:layout_marginStart="28dp"
            app:drawableEndCompat="@drawable/settings"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>