<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_1"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/taxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/_1"
        app:layout_constraintRight_toRightOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/taxi"
        app:srcCompat="@drawable/vector"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg"
        android:drawableStart="@drawable/mail_outline"
        android:drawablePadding="29dp"
        android:hint="@string/your_e_mail"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textColorHint="#F6BC1A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/your"
        android:layout_marginBottom="20dp"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/your"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="245dp"
        android:background="@drawable/bg"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="29dp"
        android:hint="@string/your_password"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textColorHint="#F6BC1A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeat"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="29dp"
        android:hint="@string/repeat_password"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textColorHint="#F6BC1A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/repeat"
        app:layout_constraintTop_toBottomOf="@id/repeat"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_term"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/repeat"
        app:layout_constraintLeft_toRightOf="@id/check"
        android:layout_marginStart="14dp"
        android:layout_marginTop="23dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:backgroundTint="#F6BC1A"
        android:textColorHint="#546E7A"
        app:cornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>