<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_1"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_login"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="305dp"
        android:background="@color/white"
        android:drawableStart="@drawable/mail_outline"
        android:drawablePadding="29dp"
        android:hint="@string/ivanov_mail_com"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_text"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="245dp"
        android:background="@color/white"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="29dp"
        android:hint="@string/password"
        android:paddingStart="17dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="208dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/password_text"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_my"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/check"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="208dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_my"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/text"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="208dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="290dp"
        android:layout_height="59dp"
        android:layout_marginBottom="114dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:backgroundTint="#F6BC1A"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_my"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="65dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>